# usagepal

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  USAGEPAL_OPTIMIZATION_ANALYSIS.md  bunfig.toml  copy-bundled.cjs  index.html  lutin.yml  package.json  vite.config.ts
.agents/lessons/: share-model-costs.md
.codex/environments/: environment.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml
docs/: PROJECT_OVERVIEW_COMPACT.md  app-state-architecture.md  capture-logs.md  getting-started.md  local-http-api.md  notifications.md  proxy.md
docs/plugins/: api.md  schema.md
docs/providers/: amp.md  antigravity.md  claude.md  cline-pass.md  codex.md  copilot.md  cursor.md  devin.md  grok.md  jetbrains-ai-assistant.md  kiro.md  opencode-go.md  openrouter.md  zai.md
plugins/: manifests.test.js  test-helpers.js
plugins/amp/: plugin.js  plugin.json  plugin.test.js
plugins/antigravity/: plugin.json
plugins/claude/: plugin.ccusage.test.js  plugin.js  plugin.json  plugin.test.js
plugins/cline-pass/: plugin.js  plugin.json  plugin.test.js
plugins/codex/: plugin.ccusage.test.js  plugin.js  plugin.json  plugin.test.js
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.json  plugin.test.js
plugins/devin/: plugin.json
plugins/factory/: plugin.js  plugin.json
plugins/grok/: plugin.js  plugin.json  plugin.test.js
plugins/jetbrains-ai-assistant/: plugin.json
plugins/kimi/: plugin.js  plugin.json
plugins/kiro/: plugin.js  plugin.json
plugins/minimax/: plugin.json
plugins/opencode-go/: plugin.js  plugin.json  plugin.test.js
plugins/openrouter/: plugin.js  plugin.json  plugin.test.js
plugins/perplexity/: plugin.js  plugin.json
plugins/synthetic/: plugin.json
plugins/zai/: plugin.json
scripts/: build-release.sh  bump-version.mjs
src/: App.test.tsx  App.tsx  bindings.ts  tauri-conf-security.test.ts  tauri-icon-assets.test.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/Icon.icon/: icon.json
src-tauri/src/: beta_updater.rs  clinepass_key.rs  config.rs  keylight.rs  lib.rs  log_path.rs  main.rs  notifications.rs  onboarding.rs  openrouter_key.rs  panel.rs  tray.rs  whats_new.rs
src-tauri/src/local_http_api/: cache.rs  mod.rs  server.rs
src-tauri/src/plugin_engine/: ccusage.rs  host_api.rs  manifest.rs  mod.rs  pricing_cache.rs  runtime.rs
src-tauri/tests/: ccusage_differential.rs  pricing_overlay.rs
src-tauri/tests/fixtures/ccusage/: claude-expected.json  codex-expected.json
src-tauri/tests/fixtures/ccusage/claude/projects/testproj/: cache1h.jsonl  dupes.jsonl  session.jsonl  sidechain.jsonl
src-tauri/tests/fixtures/ccusage/codex/sessions/: session-a.jsonl  session-c.jsonl
src/components/: about-dialog.test.tsx  about-dialog.tsx  api-keys-section.test.tsx  api-keys-section.tsx  chromeless-window-shell.tsx  clinepass-key-dialog.test.tsx  clinepass-key-dialog.tsx  donut.test.tsx  donut.tsx  export-icon.tsx  global-shortcut-section.tsx  logo.tsx  models-graph-card.test.tsx  models-graph-card.tsx  models-today-strip.test.tsx  models-today-strip.tsx  notifications-section.test.tsx  notifications-section.tsx  openrouter-key-dialog.test.tsx  openrouter-key-dialog.tsx  panel-footer.test.tsx  panel-footer.tsx  plugin-error.tsx  provider-card.test.tsx  provider-card.tsx  provider-icon-mask.tsx  settings-advanced-section.tsx  settings-app-menu.tsx  share-card-theme.ts  (+8 more)
(+121 files in other folders)
