[package]
name = "usagepal"
version = "0.7.61"
description = "UsagePal is an open source AI subscription limit tracker (a fork of OpenUsage)"
authors = ["Nicolas Demanez"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Explicit workspace, root package included implicitly. Without this table,
# Cargo treats `vendor/ccusage` (a path dependency) as an external crate for
# `cargo test -p`/dev-dependency purposes, not a workspace member — even
# though it lives inside this directory tree and is built as part of every
# `cargo build`/`cargo test --lib` here. That distinction only bites once a
# path dependency has its own `[dev-dependencies]` (added for
# `ccusage-vendor`'s vendored `insta` snapshot test): `cargo test -p
# ccusage-vendor` then fails with "cannot be tested because it requires
# dev-dependencies and is not a member of the workspace". Declaring the
# workspace explicitly (root package + `vendor/ccusage`) fixes that, with no
# other observable effect — `vendor/ccusage/Cargo.lock` did not previously
# exist as a separate lockfile; everything already resolved through this
# crate's single `Cargo.lock`.
[workspace]
members = ["vendor/ccusage"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "usagepal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: serde_json's DEFAULT float parser is not correctly rounded
# — it can land 1 ULP away from the nearest double. That silently corrupts money
# values: the `ccusage_differential` fixture's `0.00015000000000000001` parses to
# `0.00015` (a different double) without this feature, which made the gate report
# a bogus diff against a loader whose output is in fact bit-identical to
# ccusage@20.0.2's. Costs are f64 all the way to the UI, so we want exact parsing.
serde_json = { version = "1", features = ["float_roundtrip"] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
time = { version = "0.3.47", features = ["formatting"] }
dirs = "6"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking", "socks"] }
rquickjs = { version = "0.12", features = ["bindgen"] }
tauri-plugin-store = "2.4.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-notification = "2"
regex-lite = "0.1.9"
aes-gcm = "0.10.3"
sha2 = "0.11"
keylight = "0.3.2"
tauri-plugin-keylight = "0.3.2"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
specta-typescript = "0.0.12"
ccusage-vendor = { path = "vendor/ccusage" }

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.15"
objc2 = "0.6"
objc2-foundation = "0.3"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
serial_test = "3.5.0"
